css/style.css
/*

=====================
BODY, HTML
=====================

*/
body {
    font-weight: 400;
}

/*

=====================
NAVBAR
=====================

*/
.navbar {
    border: none;
}
.navbar ul.nav > li > a {
    text-transform: uppercase;
    border-top: solid 5px transparent;
}
.navbar ul.nav > li > a:hover {
    border-top: solid 5px;
}
@media (max-width: 767px) {
    .navbar ul.nav > li > a:hover {
        border-top: solid 5px transparent;
    }
}
.navbar ul.nav > li.active > a,
.navbar ul.nav > li.open > a {
    text-decoration: none !important;
    border-top: solid 5px;
    font-weight: bold;
}
@media (max-width: 767px) {
    .navbar ul.nav > li.active > a,
    .navbar ul.nav > li.open > a {
        border-top: solid 5px transparent;
    }
}
/*

=====================
UNIVERSAL SECTION STYLES
=====================

*/
.section {
    position: relative;
    padding-top: 60px;
    padding-bottom: 60px;
    text-align: center;
}
.section:before,
.section:after {
    content: " ";
    display: table;
}
.section:after {
    clear: both;
}
.section:before,
.section:after {
    content: " ";
    display: table;
}
.section:after {
    clear: both;
}
.section h2.title {
    display: inline-block;
    font-size: 50px;
    font-weight: 100;
    padding: 10px 0;
    margin-bottom: 44px;
    text-align: center;
    border-bottom: solid 1px #ccc;
    border-top: solid 1px #ccc;
    text-transform: uppercase;
    line-height: 1.2;
}
.section h2.title span {
    font-size: 40px;
}
@media (max-width: 767px) {
    .section h2.title {
        font-size: 40px;
    }
}
.section .img-responsive {
    margin: 0 auto;
}
.section .dark-mask {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #000;
    opacity: 0.4;
    filter: alpha(opacity=40);
}
.section .inline-title {
    display: inline-block;
    padding: 10px;
    border-top: solid 1px #ccc;
    border-bottom: solid 1px #ccc;
    text-transform: uppercase;
}
.text-narrow p {
    font-size: 20px;
    font-weight: 300;
    margin: 0 0 44px;
}
@media (max-width: 767px) {
    .text-narrow p {
        font-size: 16px;
    }
}

.text-gradient h2 {
    border-color: #fff;
}
.text-gray {
    background: #f7f7f7;
}
@media (max-width: 991px) {
    .text-gray {
        background: #eeeeee;
    }
}
.text-parallax {
    padding-top: 120px;
    padding-bottom: 120px;
    -webkit-backface-visibility: hidden;
}
.text-parallax.parallax-image {
    background: url('../img/robot.jpg') center center no-repeat fixed;
}
@media (max-width: 991px) {
    .text-parallax {
        padding-top: 80px;
        padding-bottom: 80px;
    }
}
/*
=====================
INTRO
=====================

*/
#intro {
    position: relative;
    height: 100%;
    background: url('../img/home.jpg') center center no-repeat;
    background-position: left bottom;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    -webkit-backface-visibility: hidden;
}
#intro .item {
    height: 100%;
}
#intro .item .logo {
    margin-bottom: 120px;
    opacity: 0;
    filter: alpha(opacity=0);
    -webkit-backface-visibility: hidden;
}
@media (max-width: 767px) {
    #intro .item .logo {
        margin-bottom: 50px;
    }
}
#intro .item h1 {
    font-size: 60px;
    color: #fff;
    margin-bottom: 40px;
    font-weight: 700;
    opacity: 0;
    filter: alpha(opacity=0);
    -webkit-backface-visibility: hidden;
}
@media (max-width: 991px) {
    #intro .item h1 {
        font-size: 40px;
    }
}
@media (max-width: 767px) {
    #intro .item h1 {
        font-size: 35px;
    }
}
#intro .item h2 {
    color: #fff;
    margin-bottom: 120px;
    font-weight: 400;
    opacity: 0;
    filter: alpha(opacity=0);
    -webkit-backface-visibility: hidden;
}
@media (max-width: 767px) {
    #intro .item h2 {
        font-size: 25px;
        margin-bottom: 20px;
        padding: 0 30px;
    }
}
@media (max-width: 1199px) {
    #intro .item h2 {
        font-size: 25px;
        margin-bottom: 40px;
    }
}
#intro .item .carousel-caption {
    left: 0;
    right: 0;
    margin-left: 50px;
    margin-right: 50px;
}
#intro .container,
#intro .row {
    height: 100%;
    position: relative;
}
/*

=====================
ABOUT
=====================

*/
.progress-title {
    text-align: left;
    font-weight: 300;
    text-transform: uppercase;
}

.progress-striped .progress-bar-skill {
    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
}
.progress-striped .progress-bar-skill {
    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
}

#about
{
  background: #B8CFCF;
  color: white;
}

#about .title
{
  border-color: white;
}

#about .image
{
  margin-top: 50px;
}
/*

=====================
WORKS / REFERENCES
=====================

*/
#filter {
    text-align: center;
    margin: 20px 0;
    padding: 0;
}
#filter li {
    display: inline-block;
    list-style-type: none;
    font-family: 'Roboto Slab', serif;
    margin-bottom: 30px;
    border-top: solid 1px;
    border-bottom: solid 1px;
    margin: 0 10px 20px;
    -webkit-transition: all 0.2s ease-out;
    -moz-transition: all 0.2s ease-out;
    transition: all 0.2s ease-out;
}
#filter li a {
    display: inline-block;
    padding: 10px;
}
/* ... */

